# focloireacht-server

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
mcp/: server.py  setup.sh
scripts/: acceptance.sh
src/: config.rs  db.rs  main.rs
src/models/: lex.rs  meta.rs  term.rs
src/routes/: health.rs  lex.rs  meta.rs  term.rs
